src/test/deca/context/invalid/created/binary_exp/op_arith/mult_boolean_boolean.deca
// Description :
//    test mult entre un boolean et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: L’opérande gauche est de type boolean, L’opérande droite est de type boolean. Or les opérandes d’un modulo doivent être de type ‘int’

{
boolean a;
boolean b;
int c = a * b;
}
